# cribbage-core

./: Cargo.toml  LICENSE  README.md
resources/cribbage_hand_scores/: README.md
src/: board.rs  card.rs  deck.rs  lib.rs  main.rs
src/hand/: crib_cards.rs  crib_part.rs  dealt_cards.rs  kept_cards.rs  mod.rs
src/pegging/: four_card_pegging.rs  mod.rs  one_card_pegging.rs  three_card_pegging.rs  two_card_pegging.rs
